tests/functional/data/transpiler/common/errors/kernel/kernel_return_not_void.err
kernel_return_not_void.cpp:1:1: error: 'okl_kernel': only applies to functions with [void] return types
    1 | @kernel int hello_kern() {
      | ^
